--- a/500pxChallenge/500pxChallenge/Base.lproj/Main.storyboard
+++ b/500pxChallenge/500pxChallenge/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="121" height="114"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q59-FS-eCS">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q59-FS-eCS">
                                                     <rect key="frame" x="0.0" y="0.0" width="121" height="114"/>
                                                 </imageView>
                                             </subviews>
@@ -98,18 +98,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wjK-xC-ayj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wjK-xC-ayj">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="wjK-xC-ayj" secondAttribute="trailing" id="BSk-Ea-eZl"/>
+                            <constraint firstItem="wjK-xC-ayj" firstAttribute="top" secondItem="cGo-RX-FFy" secondAttribute="bottom" id="DSm-6R-Uh9"/>
                             <constraint firstItem="bSF-AO-Txi" firstAttribute="top" secondItem="wjK-xC-ayj" secondAttribute="bottom" id="Ko7-Es-Lru"/>
                             <constraint firstItem="wjK-xC-ayj" firstAttribute="leading" secondItem="I25-NF-ckj" secondAttribute="leading" id="cfw-eS-4uS"/>
-                            <constraint firstItem="wjK-xC-ayj" firstAttribute="top" secondItem="I25-NF-ckj" secondAttribute="top" id="oap-xn-pcC"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="photo" destination="wjK-xC-ayj" id="nrC-EU-Ici"/>
                     </connections>
